Bug 493652 - Plasma crashes in Kirigami::Platform::PlatformThemeChangeTracker::PlatformThemeChangeTracker following recent color-related changes
Summary: Plasma crashes in Kirigami::Platform::PlatformThemeChangeTracker::PlatformThe...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: Other Linux
: NOR crash
Target Milestone: Not decided
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-09-25 20:35 UTC by Nate Graham
Modified: 2024-09-26 15:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-09-25 20:35:00 UTC
With today's git master, when switching color schemes in the KCM, I'm sometimes getting Plasma crashes in Kirigami::Platform::PlatformThemeChangeTracker::PlatformThemeChangeTracker:


Thread 1 (Thread 0x7f332b88fb80 (LWP 1164425)):
[KCrash Handler]
#5  QFlags<Kirigami::Platform::PlatformThemeChangeTracker::PropertyChange>::operator|= (this=0x0, other=...) at /usr/include/qt6/QtCore/qflags.h:89
#6  Kirigami::Platform::PlatformThemeChangeTracker::PlatformThemeChangeTracker (this=0x7fff56ba2930, theme=<optimized out>, changes=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:1050
#7  0x00007f331c34e30b in Kirigami::Platform::PlatformThemePrivate::setDataColor (this=<optimized out>, theme=0x18f33a60, color=Kirigami::Platform::PlatformThemeData::TextColor, value=...) at /usr/include/qt6/QtCore/qflags.h:74
#8  Kirigami::Platform::PlatformThemePrivate::setDataColor (this=<optimized out>, theme=0x18f33a60, color=Kirigami::Platform::PlatformThemeData::TextColor, value=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:329
#9  Kirigami::Platform::PlatformTheme::setTextColor (this=this@entry=0x18f33a60, color=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:557
#10 0x00007f330fe0c699 in PlasmaTheme::syncColors (this=0x18f33a60) at /home/nate/kde/src/libplasma/src/declarativeimports/kirigamiplasmastyle/plasmatheme.cpp:108
#11 0x00007f33313fc8f2 in QtPrivate::QSlotObjectBase::call (this=0x18f34290, r=<optimized out>, a=0x7fff56ba2a48) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#12 doActivate<false> (sender=0x18f30e00, signal_index=19, argv=0x7fff56ba2a48) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#13 0x00007f33313f2bc7 in QMetaObject::activate (sender=sender@entry=0x18f30e00, m=m@entry=0x7f33334f23c0, local_signal_index=local_signal_index@entry=16, argv=argv@entry=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#14 0x00007f3332feb097 in QQuickItem::visibleChanged (this=this@entry=0x18f30e00) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/redhat-linux-build/src/quick/Quick_autogen/include/moc_qquickitem.cpp:1431
#15 0x00007f3332ffb308 in QQuickItemPrivate::setEffectiveVisibleRecur (this=0x18f30ef0, newEffectiveVisible=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:6620
#16 0x00007f3332ffb251 in QQuickItemPrivate::setEffectiveVisibleRecur (this=this@entry=0x18e8a320, newEffectiveVisible=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:6610
#17 0x00007f3332ffb36f in QQuickItemPrivate::setVisible (this=0x18e8a320, visible=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:6507
#18 0x00007f3332905a6b in QQmlPropertyData::writeProperty (this=<optimized out>, target=<optimized out>, value=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlpropertydata_p.h:336
#19 GenericBinding<1>::doStore<bool> (this=<optimized out>, value=<optimized out>, pd=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:275
#20 GenericBinding<1>::write (this=0x18f2e770, result=..., isUndefined=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:238
#21 0x00007f33328fdfe1 in QQmlBinding::doUpdate (this=0x18f2e770, watcher=..., flags=..., scope=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:701
#22 0x00007f3332901d18 in QQmlBinding::update (this=0x18f2e770, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:164
#23 0x00007f333299d195 in QQmlNotifier::emitNotify (endpoint=<optimized out>, a=0x0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlnotifier.cpp:70
#24 0x00007f33313fc42d in doActivate<false> (sender=0x18f30180, signal_index=4, argv=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:3976
#25 0x00007f33313f2bc7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f3333515540 <QQuickItemViewAttached::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#26 0x00007f3333302517 in QQuickItemViewAttached::currentItemChanged (this=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/redhat-linux-build/src/quick/Quick_autogen/include/moc_qquickitemview_p.cpp:1531
#27 0x00007f333330a5dc in QQuickItemViewAttached::setIsCurrentItem (this=<optimized out>, c=false) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitemview_p.h:315
#28 QQuickItemViewPrivate::applyModelChanges (this=this@entry=0x18a6d3b0, totalInsertionResult=totalInsertionResult@entry=0x7fff56ba4900, totalRemovalResult=totalRemovalResult@entry=0x7fff56ba4930) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitemview.cpp:2125
#29 0x00007f333330abd8 in QQuickItemViewPrivate::layout (this=this@entry=0x18a6d3b0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitemview.cpp:1890
#30 0x00007f333330b3c5 in QQuickItemViewPrivate::applyPendingChanges (this=0x18a6d3b0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitemview.cpp:966
#31 0x00007f3333320227 in QQuickListViewPrivate::updateHighlight (this=0x18a6d3b0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquicklistview.cpp:1024
#32 0x00007f3333306ba0 in QQuickItemViewPrivate::itemGeometryChanged (this=this@entry=0x18a6d3b0, item=item@entry=0x18ea16e0, change=..., oldGeometry=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitemview.cpp:1162
#33 0x00007f3333326b1a in QQuickListViewPrivate::itemGeometryChanged (this=0x18a6d3b0, item=0x18ea16e0, change=..., oldGeometry=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquicklistview.cpp:1593
#34 0x00007f3332ffffc6 in operator() (listener=..., __closure=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:3881
#35 QQuickItemPrivate::notifyChangeListeners<QQuickItem::geometryChange(const QRectF&, const QRectF&)::<lambda(const QQuickItemPrivate::ChangeListener&)> > (this=0x18f25fb0, changeTypes=..., function=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem_p.h:359
#36 QQuickItem::geometryChange (this=this@entry=0x18ea16e0, newGeometry=..., oldGeometry=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:3879
#37 0x00007f331cef47d1 in QQuickControl::geometryChange (this=0x18ea16e0, newGeometry=..., oldGeometry=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quicktemplates/qquickcontrol.cpp:2092
#38 0x00007f3332ff6838 in QQuickItem::setHeight (this=0x18ea16e0, h=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:7508
#39 0x00007f33330125f4 in QQuickItemPrivate::setHeight (this=0x18f25fb0, height=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem_p.h:227
#40 QObjectCompatProperty<QQuickItemPrivate, double, &QQuickItemPrivate::_qt_property_height_offset, &QQuickItemPrivate::setHeight, &QQuickItemPrivate::heightChanged, decltype(nullptr)>::bindingWrapper (type=..., dataPtr=0x18f260e8, binding=...) at /usr/include/qt6/QtCore/6.7.2/QtCore/private/qproperty_p.h:540
#41 0x00007f3331401e0e in QPropertyBindingPrivate::evaluateRecursive_inline (this=0x18e7eb60, bindingObservers=<optimized out>, status=<optimized out>) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qproperty_p.h:860
#42 QPropertyObserverPointer::evaluateBindings (this=this@entry=0x18f2e878, bindingObservers=..., status=status@entry=0x7f332b88fac8) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qproperty.cpp:809
#43 0x00007f3331402194 in QPropertyBindingPrivate::evaluateRecursive_inline (this=0x18f2e800, bindingObservers=..., status=0x7f332b88fac8) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qproperty_p.h:872
#44 QPropertyBindingPrivate::evaluateRecursive (this=this@entry=0x18f2e800, bindingObservers=..., status=0x7f332b88fac8, status@entry=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qproperty.cpp:321
#45 0x00007f33329ceedc in QQmlPropertyBindingJS::expressionChanged (this=0x18f2e8c0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlpropertybinding.cpp:158
#46 0x00007f333299d195 in QQmlNotifier::emitNotify (endpoint=<optimized out>, a=0x0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlnotifier.cpp:70
#47 0x00007f33313fc42d in doActivate<false> (sender=0x18f2df20, signal_index=29, argv=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:3976
#48 0x00007f33313f2bc7 in QMetaObject::activate (sender=sender@entry=0x18f2df20, m=m@entry=0x7f33334f23c0, local_signal_index=local_signal_index@entry=26, argv=argv@entry=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#49 0x00007f3332feb1d7 in QQuickItem::implicitHeightChanged (this=this@entry=0x18f2df20) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/redhat-linux-build/src/quick/Quick_autogen/include/moc_qquickitem.cpp:1491
#50 0x00007f3332ff6b4b in QQuickItemPrivate::implicitHeightChanged (this=0x18e8a320) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:7526
#51 QQuickItem::setImplicitHeight (this=0x18f2df20, h=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:7552
#52 0x00007f33328fda7f in QQmlPropertyData::writeProperty (this=<optimized out>, target=<optimized out>, value=value@entry=0x7fff56ba7260, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlpropertydata_p.h:336
#53 0x00007f333290520e in GenericBinding<6>::write (this=0x18f2e650, result=0x7fff56ba7260, type=..., isUndefined=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:210
#54 0x00007f33328fe37b in QQmlBinding::doUpdate (this=0x18f2e650, watcher=..., flags=..., scope=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:690
#55 0x00007f3332901d18 in QQmlBinding::update (this=0x18f2e650, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:164
#56 0x00007f333299d195 in QQmlNotifier::emitNotify (endpoint=<optimized out>, a=0x0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlnotifier.cpp:70
#57 0x00007f33313fc42d in doActivate<false> (sender=0x18f2df20, signal_index=55, argv=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:3976
#58 0x00007f3332fee182 in QQuickItemPrivate::notifyChangeListeners<void (QQuickItemChangeListener::*)(QQuickItem*), QQuickItem* const&> (this=<optimized out>, changeTypes=..., function=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem_p.h:357
#59 QQuickItemPrivate::implicitHeightChanged (this=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:7525
#60 0x00007f3332ff6ec0 in QQuickItem::setImplicitSize (this=this@entry=0x18f30e00, w=w@entry=0, h=<optimized out>) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquickitem.cpp:7600
#61 0x00007f333305c15a in QQuickTextPrivate::updateSize (this=this@entry=0x18f30ef0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquicktext.cpp:454
#62 0x00007f333305d23f in QQuickTextPrivate::updateLayout (this=this@entry=0x18f30ef0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquicktext.cpp:266
#63 0x00007f333305e204 in QQuickText::setText (this=0x18f30e00, n=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/quick/items/qquicktext.cpp:1987
#64 0x00007f3332906085 in QQmlPropertyData::writeProperty (this=<optimized out>, target=<optimized out>, value=0x7fff56ba90b0, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlpropertydata_p.h:336
#65 GenericBinding<10>::doStore<QString> (this=0x18f321d0, value=..., pd=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:275
#66 GenericBinding<10>::write (this=0x18f321d0, result=..., isUndefined=<optimized out>, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:256
#67 0x00007f33328fdfe1 in QQmlBinding::doUpdate (this=0x18f321d0, watcher=..., flags=..., scope=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:701
#68 0x00007f3332901d18 in QQmlBinding::update (this=0x18f321d0, flags=...) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlbinding.cpp:164
#69 0x00007f333299d195 in QQmlNotifier::emitNotify (endpoint=<optimized out>, a=0x0) at /usr/src/debug/qt6-qtdeclarative-6.7.2-2.fc40.x86_64/src/qml/qml/qqmlnotifier.cpp:70
#70 0x00007f33313fc42d in doActivate<false> (sender=0x18f33a60, signal_index=3, argv=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:3976
#71 0x00007f33313f2bc7 in QMetaObject::activate (sender=sender@entry=0x18f33a60, m=m@entry=0x7f331c3795a0 <Kirigami::Platform::PlatformTheme::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#72 0x00007f331c34a060 in Kirigami::Platform::PlatformTheme::colorsChanged (this=this@entry=0x18f33a60) at /home/nate/kde/build/kirigami/src/platform/KirigamiPlatform_autogen/include/moc_platformtheme.cpp:531
#73 0x00007f331c34c458 in Kirigami::Platform::PlatformTheme::emitSignalsForChanges (this=0x18f33a60, changes=12) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:884
#74 0x00007f331c34c6fb in Kirigami::Platform::PlatformThemeChangeTracker::~PlatformThemeChangeTracker (this=0x7fff56baac80, __in_chrg=<optimized out>) at /usr/include/qt6/QtCore/qflags.h:103
#75 0x00007f331c34e329 in Kirigami::Platform::PlatformThemePrivate::setDataColor (this=<optimized out>, theme=0x18f33a60, color=Kirigami::Platform::PlatformThemeData::TextColor, value=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:347
#76 Kirigami::Platform::PlatformThemePrivate::setDataColor (this=<optimized out>, theme=0x18f33a60, color=Kirigami::Platform::PlatformThemeData::TextColor, value=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:329
#77 Kirigami::Platform::PlatformTheme::setTextColor (this=this@entry=0x18f33a60, color=...) at /home/nate/kde/src/kirigami/src/platform/platformtheme.cpp:557
#78 0x00007f330fe0c699 in PlasmaTheme::syncColors (this=0x18f33a60) at /home/nate/kde/src/libplasma/src/declarativeimports/kirigamiplasmastyle/plasmatheme.cpp:108
#79 0x00007f33313fc8f2 in QtPrivate::QSlotObjectBase::call (this=0x18f34b50, r=<optimized out>, a=0x7fff56baad98) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#80 doActivate<false> (sender=0x18f33a78, signal_index=3, argv=0x7fff56baad98) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#81 0x00007f33313fc8f2 in QtPrivate::QSlotObjectBase::call (this=0x18f34020, r=<optimized out>, a=0x7fff56baae78) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#82 doActivate<false> (sender=0x15794770, signal_index=3, argv=0x7fff56baae78) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#83 0x00007f33313fc8f2 in QtPrivate::QSlotObjectBase::call (this=0x15988940, r=<optimized out>, a=0x7fff56baafc0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobjectdefs_impl.h:469
#84 doActivate<false> (sender=0x1594c8f0, signal_index=3, argv=0x7fff56baafc0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4086
#85 0x00007f33313f2bc7 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f333188b100, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff56baafc0) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:4146
#86 0x00007f333140bcbd in QTimer::timeout (this=<optimized out>, _t1=...) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/redhat-linux-build/src/corelib/Core_autogen/include/moc_qtimer.cpp:224
#87 0x00007f33313edd5f in QObject::event (this=0x1594c8f0, e=0x7fff56bab170) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qobject.cpp:1482
#88 0x00007f3333d8b218 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x1594c8f0, e=0x7fff56bab170) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/widgets/kernel/qapplication.cpp:3287
#89 0x00007f3331396e88 in QCoreApplication::notifyInternal2 (receiver=0x1594c8f0, event=0x7fff56bab170) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1142
#90 0x00007f33313970ed in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qcoreapplication.cpp:1583
#91 0x00007f3331552b47 in QTimerInfoList::activateTimers (this=0x15701700) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qtimerinfo_unix.cpp:434
#92 0x00007f3331684fd9 in timerSourceDispatch (source=<optimized out>) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:150
#93 0x00007f33307b8e8c in g_main_dispatch (context=0x7f3318000f00) at ../glib/gmain.c:3344
#94 g_main_context_dispatch_unlocked (context=0x7f3318000f00) at ../glib/gmain.c:4152
#95 0x00007f333081ac98 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f3318000f00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4217
#96 0x00007f33307ba383 in g_main_context_iteration (context=0x7f3318000f00, may_block=1) at ../glib/gmain.c:4282
#97 0x00007f33316851a3 in QEventDispatcherGlib::processEvents (this=0x15609e10, flags=...) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:394
#98 0x00007f33313a3bc3 in QEventLoop::exec (this=this@entry=0x7fff56bab440, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/global/qflags.h:34
#99 0x00007f333139fa7c in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/corelib/global/qflags.h:74
#100 0x00007f3331dd66ed in QGuiApplication::exec () at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/gui/kernel/qguiapplication.cpp:1926
#101 0x00007f3333d8b189 in QApplication::exec () at /usr/src/debug/qt6-qtbase-6.7.2-6.fc40.x86_64/src/widgets/kernel/qapplication.cpp:2555
#102 0x0000000000427b86 in main (argc=<optimized out>, argv=<optimized out>) at /home/nate/kde/src/plasma-workspace/shell/main.cpp:188
Comment 1 Bug Janitor Service 2024-09-26 09:32:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1621
Comment 2 Arjen Hiemstra 2024-09-26 15:17:28 UTC
Git commit 3fc4542b237346cbc213bbd411be03224da408d5 by Arjen Hiemstra.
Committed on 26/09/2024 at 09:27.
Pushed by ahiemstra into branch 'master'.

platform: Check if weak pointer is expired in PlatformThemeChangeTracker ctor

Otherwise we may end up in a nullptr dereference because the weak
pointer is expired.

M  +3    -2    src/platform/platformtheme.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/3fc4542b237346cbc213bbd411be03224da408d5