platform: Check if weak pointer is expired in PlatformThemeChangeTracker ctor

Otherwise we may end up in a nullptr dereference because the weak
pointer is expired.

BUG: 493652